tests/specs/class_readonly_index_signature.txt
# mod.ts
export class C {
  readonly [key: string]: number;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class C {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   readonly [key: string]: number;
  |   ^

# output.txt
Defined in file:///mod.ts:0:1

class C

  readonly [key: string]: number


# output.json
[
  {
    "name": "C",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "class",
        "def": {
          "isAbstract": false,
          "constructors": [],
          "properties": [],
          "indexSignatures": [
            {
              "readonly": true,
              "params": [
                {
                  "kind": "identifier",
                  "name": "key",
                  "optional": false,
                  "tsType": {
                    "repr": "string",
                    "kind": "keyword",
                    "keyword": "string"
                  }
                }
              ],
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "keyword": "number"
              },
              "location": {
                "filename": "file:///mod.ts",
                "line": 1,
                "col": 2,
                "byteIndex": 19
              }
            }
          ],
          "methods": [],
          "extends": null,
          "implements": [],
          "typeParams": [],
          "superTypeParams": []
        }
      }
    ]
  }
]
